fix skills title by adding overflow hidden to sections

--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -1,6 +1,4 @@
 .about {
-  overflow-x: hidden;
-
   &__description {
     font-size: 20px;
     line-height: 1.4em;
