--- a/src/less/blocks/contact.less
+++ b/src/less/blocks/contact.less
@@ -1,6 +1,4 @@
 .contact {
-  overflow: hidden;
-
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
