--- a/src/less/common/section.less
+++ b/src/less/common/section.less
@@ -3,6 +3,7 @@
   min-height: 25vh;
   padding: 5vh 10vw;
   color: @main-color;
+  overflow: hidden;
 
   @media (max-height: @screen-rotated) {
     height: max-content;
